# barnhunt

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  barnhunt.py  pdm_build.py  pyproject.toml  setup.cfg  setup.py  showlayer.py  tox.ini
.github/workflows/: ci.yml  oxidize.yml  pyoxidize.yml  tests.yml
barnhunt/: __init__.py  _compat.py  cli.py  compat.py  coursemaps.py  etree_util.py  inkscape.py  layerinfo.py  main.py  pager.py  parallel.py  pdfs.py  pdfutil.py  rand.py  rats.py  template.py  templating.py
barnhunt/inkscape/: __init__.py  css.py  runner.py  svg.py  utils.py
barnhunt/installer/: __init__.py  github.py  metadata.py
changes.d/: 20240903_185716_dairiki.md  20240903_191617_dairiki.md  20240904_083945_dairiki.md  20260306_171229_dairiki.md  20260306_171428_dairiki.md  20260306_173057_dairiki.md  20260307_104037_dairiki.md  20260307_183909_dairiki.md  entry_title.txt.j2  new_fragment.md.j2
pyoxidizer/: build.py  list_modules.py  pyoxidizer.bzl
stubs/pexpect/: popen_spawn.pyi  spawnbase.pyi
tests/: conftest.py  ruff.toml  test_cli.py  test_coursemaps.py  test_css.py  test_etree_util.py  test_functional.py  test_init.py  test_inkscape.py  test_layerinfo.py  test_main.py  test_pager.py  test_parallel.py  test_pdfutil.py  test_rats.py  test_template.py  test_templating.py  testlib.py
tests/inkscape/: dummy_inkscape.py  test_css.py  test_runner.py  test_shell_mode_integration.py  test_svg.py  test_utils.py
tests/installer/: ratelimit.py  test_github.py  test_installer.py  test_metadata.py
