[project]
name = "barnhunt"
description = "Helpers for drawing Barn Hunt course maps using Inkscape"
keywords = ["barn hunt", "inkscape", "course maps"]
license = {text = "GPL-3.0-only"}
requires-python = ">= 3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Conversion",
    "Topic :: Printing",
    "Topic :: Utilities",
]
dynamic = ["version", "readme"]
dependencies = [
    "atomicwrites",
    "click",
    "jinja2 >= 3",
    "lxml",
    "pdfrw",
    "pexpect",
    "shellescape",
    "tinycss2",
    "webencodings",
]

[project.entry-points.console_scripts]
barnhunt = "barnhunt.cli:main"

[project.urls]
Homepage = "https://gitlab.com/dairiki/barnhunt"

[[project.authors]]
name = "Jeff Dairiki"
email = "dairiki@dairiki.org"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = ["README.md", "CHANGES.md"]
content-type = "text/markdown"

[tool.setuptools.packages.find]
include = ["barnhunt"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
norecursedirs = [
    ".tox",
    "build",
]

[tool.mypy]
ignore_errors = true
