[metadata]
name = barnhunt
description = Helpers for drawing Barn Hunt course maps
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
url = https://gitlab.com/dairiki/barnhunt
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = barn hunt inkscape course maps
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Graphics :: Conversion
    Topic :: Printing
    Topic :: Utilities

[options]
packages =
    barnhunt
    barnhunt.inkscape
install_requires =
    click
    jinja2
    lxml
    pdfrw
    pexpect
    shellescape
    tinycss2
    webencodings
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
console_scripts =
    barnhunt = barnhunt:main

